# nlpprepkit

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: cd.yml  ci.yml
examples/: 1.py
nlpprepkit/: __init__.py  functions.py  functions_test.py  model.py  model_test.py  preprocessor.py  preprocessor_test.py
nlpprepkit/core/: exceptions.py  utils.py
nlpprepkit/functions/: __init__.py  contractions.py  contractions_test.py  normalization.py  normalization_test.py  text_cleaning.py  text_cleaning_test.py
nlpprepkit/pipeline/: pipeline.py
tests/: contractions_test.py  normalization_test.py  pipeline_test.py  text_cleaning_test.py
textpreproc/: __init__.py  exceptions.py  functions.py  functions_test.py  model.py  model_test.py  preprocessor.py  preprocessor_test.py  text_preprocessor.py  utils.py
textpreprocessor/: exceptions.py
